Avoid if() auto-dereference of quoted argument
When testing CMAKE_CXX_COMPILER_ID, do not explicitly dereference
the variable.  Instead let if() do it in an unquoted argument.

This avoids CMP0054 warnings on MSVC.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,7 @@ if(NOT CastXML_INSTALL_MAN_DIR)
   set(CastXML_INSTALL_MAN_DIR man)
 endif()
 
-if("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU|Clang")
+if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti -std=c++11")
 endif()
 
