RunClang: Refactor definition of implicit members
Use clang::Sema::PerformPendingInstantiations before we attempt to add
implicit member definitions so any real errors show up first.  Then set
SuppressAllDiagnostics to suppress errors caused by the following.

Iterate over all members of one class at a time in order of completion
of class definition (bases before derived classes).  Force definition of
each member using clang::Sema::MarkFunctionReferenced followed by
another call to clang::Sema::PerformPendingInstantiations to ensure that
members formed by implicitly instantiated templates are completed.
Clang will mark any failed declaration as invalid, allowing us to
exclude it from the output.  This works both for implicit and explicit
members.

Update the test suite to mark test cases that are no longer 'broken'.

According to discussion on the Clang cfe-commits mailing list:

 [PATCH] Add DiagnosticSuppressionScope RAII class
 http://thread.gmane.org/gmane.comp.compilers.clang.scm/110832/focus=111112

this approach may depend on non-guaranteed behavior.  By iterating over
members in order of class definition, we mark any bad special members
invalid in base classes so that when Clang processes those in derived
classes the invalid members are only one "step" away.  Hopefully this
behavior will be easier to preserve if Clang changes in the future.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -146,6 +146,7 @@ castxml_test_gccxml(Class-friends)
 castxml_test_gccxml(Class-implicit-member-access)
 castxml_test_gccxml(Class-implicit-member-access-mutable)
 castxml_test_gccxml(Class-implicit-member-array)
+castxml_test_gccxml(Class-implicit-member-bad-base)
 castxml_test_gccxml(Class-implicit-member-const)
 castxml_test_gccxml(Class-implicit-member-reference)
 castxml_test_gccxml(Class-implicit-members)
@@ -222,6 +223,5 @@ castxml_test_gccxml_c(Typedef-called-class)
 
 castxml_test_gccxml_c(invalid)
 
-castxml_test_gccxml_broken(Class-implicit-member-bad-base)
 castxml_test_gccxml_broken(Class-template-constructor-template)
 castxml_test_gccxml_broken(ReferenceType-to-Class-template)
