--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -159,6 +159,7 @@ castxml_test_gccxml(Class-template-Method-Argument-default)
 castxml_test_gccxml(Class-template-bases)
 castxml_test_gccxml(Class-template-friends)
 castxml_test_gccxml(Class-template-member-Typedef)
+castxml_test_gccxml(Class-template-member-Typedef-const)
 castxml_test_gccxml(Class-template-member-template)
 castxml_test_gccxml(CvQualifiedType)
 castxml_test_gccxml(Enumeration)
