test: Add a case to test that -c is ignored
The '-c' option is required to use castxml with ccache to tell ccache
that we are compiling rather than linking.  In castxml we already ignore
the option when used with --castxml-gccxml, so add a test case to ensure
the behavior is preserved in the future.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -114,6 +114,7 @@ castxml_test_cmd(gccxml-and-objc1 --castxml-gccxml ${empty_m})
 castxml_test_cmd(gccxml-and-objc2 --castxml-gccxml ${empty_mm})
 castxml_test_cmd(gccxml-empty-c++98 --castxml-gccxml -std=c++98 ${empty_cxx})
 castxml_test_cmd(gccxml-empty-c++98-E --castxml-gccxml -std=c++98 ${empty_cxx} -E)
+castxml_test_cmd(gccxml-empty-c++98-c --castxml-gccxml -std=c++98 ${empty_cxx} -c)
 castxml_test_cmd(o-missing -o)
 castxml_test_cmd(start-missing --castxml-start)
 castxml_test_cmd(rsp-empty @${input}/empty.rsp)
