Detect: Use Clang builtin include dir even with --castxml-cc-<id>
We need implementation-provided headers to come from Clang to match what
is really built in to the parser.  When not using --castxml-cc-<id>, the
Clang driver adds its builtin include directory in methods like

  Linux::AddClangSystemIncludeArgs
  MSVCToolChain::AddClangSystemIncludeArgs
  CrossWindowsToolChain::AddClangSystemIncludeArgs

(see lib/Driver/*ToolChain*.cpp).  When using --castxml-cc-<id>, we must
add the Clang builtin include dir in the appropriate place.

GNU-like compilers should have a builtin include directory too,
providing files like <emmintrin.h>.  The Clang driver does not add this
directory from GCC toolchains and instead adds its own builtin include
directory.  In this case, replace the detected compiler builtin include
directory with ours.

MSVC-like compilers have no separate builtin include directory.  The
Clang driver simply places its own builtin include direcory before the
system include directory read from the INCLUDE environment variable.  In
this case, do the same.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -123,6 +123,8 @@ castxml_test_cmd(rsp-o-missing @${input}/o-missing.rsp)
 
 # Test --castxml-cc-gnu detection.
 add_executable(cc-gnu cc-gnu.c)
+set_property(SOURCE cc-gnu.c APPEND PROPERTY COMPILE_DEFINITIONS
+  "TEST_DIR=\"${CMAKE_CURRENT_SOURCE_DIR}\"")
 castxml_test_cmd(cc-gnu-c-E --castxml-cc-gnu $<TARGET_FILE:cc-gnu> ${empty_c} -E -dM)
 castxml_test_cmd(cc-gnu-c-cmd --castxml-cc-gnu $<TARGET_FILE:cc-gnu> ${empty_c} "-###")
 castxml_test_cmd(cc-gnu-cxx-E --castxml-cc-gnu $<TARGET_FILE:cc-gnu> ${empty_cxx} -E -dM)
