Detect: Provide __float128 when simulating GNU compilers
GNU compilers provide a __float128 builtin type on Intel architectures.
When simulating such GNU compiler preprocessing, define a __float128
type with the expected size and alignment in case the translation unit
references it.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -259,10 +259,12 @@ endforeach()
 
 if(TEST_GNU_C)
   set(castxml_test_gccxml_extra_arguments --castxml-cc-gnu ${TEST_GNU_C})
+  castxml_test_gccxml_c(GNU-float128)
   unset(castxml_test_gccxml_extra_arguments)
 endif()
 
 if(TEST_GNU_CXX)
   set(castxml_test_gccxml_extra_arguments --castxml-cc-gnu ${TEST_GNU_CXX})
+  castxml_test_gccxml(GNU-float128)
   unset(castxml_test_gccxml_extra_arguments)
 endif()
