Output: Traverse namespace redeclarations
A namespace may be redeclared to add more members:

  namespace ns { void f1(); }
  namespace ns { void f2(); }

Fix our AST traversal to consider members from all redeclarations
of each namespace instead of only the canonical (first) one.
Previously we generated members from later redeclarations only
if they were referenced from other declarations we happened to
encounter.

Reported-by: Michka Popoff <michkapopoff@gmail.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -191,6 +191,8 @@ castxml_test_gccxml(Namespace-Class-template-members)
 castxml_test_gccxml(Namespace-Function-template-members)
 castxml_test_gccxml(Namespace-empty)
 castxml_test_gccxml(Namespace-extern-C-members)
+castxml_test_gccxml(Namespace-repeat)
+castxml_test_gccxml(Namespace-repeat-start)
 castxml_test_gccxml(OffsetType)
 castxml_test_gccxml(OffsetType-cv)
 castxml_test_gccxml(OperatorFunction)
