Output: Handle function types with no prototype
A FunctionType may be either FunctionProtoType or FunctionNoProtoType.
Check that runtime downcasts to FunctionProtoType succeed before using
them.  For FunctionNoProtoType we will simply output the type "int()",
which is compatible with gccxml format (gccxml never lacked prototypes
because it always operates in C++ mode).  In CastXML we can encounter
functions with no prototype in C++ modes when traversing Clang buildins.

GitHub-Issue: 1

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -225,6 +225,7 @@ if(";${LLVM_TARGETS_TO_BUILD};" MATCHES ";X86;")
   unset(castxml_test_gccxml_extra_arguments)
 endif()
 
+castxml_test_gccxml_c(FunctionNoProto)
 castxml_test_gccxml_c(FundamentalType)
 castxml_test_gccxml_c(Typedef-called-class)
 
