Output: Refactor generation of CvQualifiedType elements
Previously our handling of cv-qualified types did not account for
multiple locally cv-qualified types encountered through multiple levels
of desugaring.  This could lead to CvQualifiedType elements that
reference elements that are generated with a different id.

Refactor our internal representation of dump nodes to keep cv-qualifiers
in the node ids.  Teach AddTypeDumpNode to collect cv-qualifiers from
each level of desugaring and compute their union.  Once the desugared
unqualified type is found, generate one CvQualifiedType element for the
qualified type, if any.

Update the expected test output to account for the new ordering of
nodes.  Mark the Class-template-constructor-template test case as no
longer broken because this approach fixes it.  Add test cases covering
cv-qualifiers added at different layers of desugaring (via "T const"
where T is already a "const" type in a template instantiation).

GitHub-Issue: 10

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -159,8 +159,11 @@ castxml_test_gccxml(Class-incomplete-twice)
 castxml_test_gccxml(Class-member-template)
 castxml_test_gccxml(Class-partial-template-member-Typedef)
 castxml_test_gccxml(Class-template)
+castxml_test_gccxml(Class-template-Method-Argument-const)
 castxml_test_gccxml(Class-template-Method-Argument-default)
+castxml_test_gccxml(Class-template-Method-return-const)
 castxml_test_gccxml(Class-template-bases)
+castxml_test_gccxml(Class-template-constructor-template)
 castxml_test_gccxml(Class-template-friends)
 castxml_test_gccxml(Class-template-member-Typedef)
 castxml_test_gccxml(Class-template-member-Typedef-const)
@@ -231,7 +234,6 @@ castxml_test_gccxml_c(Typedef-called-class)
 
 castxml_test_gccxml_c(invalid)
 
-castxml_test_gccxml_broken(Class-template-constructor-template)
 castxml_test_gccxml_broken(ReferenceType-to-Class-template)
 
 #-----------------------------------------------------------------------------
