--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -188,6 +188,7 @@ castxml_test_gccxml(Method-rvalue-reference)
 castxml_test_gccxml(MethodType)
 castxml_test_gccxml(MethodType-cv)
 castxml_test_gccxml(Namespace)
+castxml_test_gccxml(Namespace-anonymous)
 castxml_test_gccxml(Namespace-Class-members)
 castxml_test_gccxml(Namespace-Class-partial-template-members)
 castxml_test_gccxml(Namespace-Class-template-members)
