test: Add case for nested namespaces

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -209,6 +209,7 @@ castxml_test_gccxml(Namespace-extern-C-members)
 castxml_test_gccxml(Namespace-inline)
 castxml_test_gccxml(Namespace-inline-start)
 castxml_test_gccxml(Namespace-inline-template)
+castxml_test_gccxml(Namespace-nested)
 castxml_test_gccxml(Namespace-repeat)
 castxml_test_gccxml(Namespace-repeat-start)
 castxml_test_gccxml(OffsetType)
