--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -126,6 +126,7 @@ castxml_test_cmd(gccxml-and-objc2 --castxml-gccxml ${empty_mm})
 castxml_test_cmd(gccxml-empty-c++98 --castxml-gccxml -std=c++98 ${empty_cxx})
 castxml_test_cmd(gccxml-empty-c++98-E --castxml-gccxml -std=c++98 ${empty_cxx} -E)
 castxml_test_cmd(gccxml-empty-c++98-c --castxml-gccxml -std=c++98 ${empty_cxx} -c)
+castxml_test_cmd(input-missing ${input}/does-not-exist.c)
 castxml_test_cmd(o-missing -o)
 castxml_test_cmd(start-missing --castxml-start)
 castxml_test_cmd(rsp-empty @${input}/empty.rsp)
