test: Add tests for Constructor, Destructor, and Converter elements

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -191,7 +191,10 @@ castxml_test_gccxml(Class-template-friends)
 castxml_test_gccxml(Class-template-member-Typedef)
 castxml_test_gccxml(Class-template-member-Typedef-const)
 castxml_test_gccxml(Class-template-member-template)
+castxml_test_gccxml(Constructor)
+castxml_test_gccxml(Converter)
 castxml_test_gccxml(CvQualifiedType)
+castxml_test_gccxml(Destructor)
 castxml_test_gccxml(Enumeration)
 castxml_test_gccxml(Enumeration-anonymous)
 castxml_test_gccxml(Field)
