--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -192,13 +192,17 @@ castxml_test_gccxml(Class-template-member-Typedef)
 castxml_test_gccxml(Class-template-member-Typedef-const)
 castxml_test_gccxml(Class-template-member-template)
 castxml_test_gccxml(Constructor)
+castxml_test_gccxml(Constructor-annotate)
 castxml_test_gccxml(Converter)
+castxml_test_gccxml(Converter-annotate)
 castxml_test_gccxml(CvQualifiedType)
 castxml_test_gccxml(Destructor)
+castxml_test_gccxml(Destructor-annotate)
 castxml_test_gccxml(Enumeration)
 castxml_test_gccxml(Enumeration-anonymous)
 castxml_test_gccxml(Field)
 castxml_test_gccxml(Function)
+castxml_test_gccxml(Function-annotate)
 castxml_test_gccxml(Function-Argument-decay)
 castxml_test_gccxml(Function-Argument-default)
 castxml_test_gccxml(Function-rvalue-reference)
@@ -210,6 +214,7 @@ castxml_test_gccxml(FunctionType-variadic)
 castxml_test_gccxml(FundamentalType)
 castxml_test_gccxml(FundamentalTypes)
 castxml_test_gccxml(Method)
+castxml_test_gccxml(Method-annotate)
 castxml_test_gccxml(Method-rvalue-reference)
 castxml_test_gccxml(MethodType)
 castxml_test_gccxml(MethodType-cv)
@@ -230,7 +235,9 @@ castxml_test_gccxml(Namespace-repeat-start)
 castxml_test_gccxml(OffsetType)
 castxml_test_gccxml(OffsetType-cv)
 castxml_test_gccxml(OperatorFunction)
+castxml_test_gccxml(OperatorFunction-annotate)
 castxml_test_gccxml(OperatorMethod)
+castxml_test_gccxml(OperatorMethod-annotate)
 castxml_test_gccxml(PointerType)
 castxml_test_gccxml(ReferenceType)
 castxml_test_gccxml(RValueReferenceType)
@@ -263,6 +270,7 @@ castxml_test_gccxml(using-directive-start)
 if(";${LLVM_TARGETS_TO_BUILD};" MATCHES ";X86;")
   set(castxml_test_gccxml_extra_arguments -target i386-pc-windows-msvc)
   castxml_test_gccxml(Function-calling-convention-ms)
+  castxml_test_gccxml(Function-calling-convention-ms-annotate)
   castxml_test_gccxml(implicit-decl-ms)
   castxml_test_gccxml(inline-asm-ms)
   unset(castxml_test_gccxml_extra_arguments)
