test: Fix message about GNU CXX compiler that we find for testing
Remove a stray line and fix a typo introduced by commit 5c8a1e73 (test:
Add infrastructure to run tests against real GNU compilers, 2015-02-24).

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -294,8 +294,7 @@ foreach(lang C CXX)
     endif()
   endif()
   if(TEST_GNU_${lang})
-    set(castxml_test_gccxml_extra_arguments --castxml-cc-gnu ${TEST_GNU_C})
-    message(STATUS "Found GNU ${lang} compiler '${TEST_GNU_C}' to drive tests")
+    message(STATUS "Found GNU ${lang} compiler '${TEST_GNU_${lang}}' to drive tests")
   endif()
 endforeach()
 
