Annotate function arguments
This was possible with gccxml, and the missing functionality was detected by
one of pygccxml's unit tests.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -203,6 +203,7 @@ castxml_test_gccxml(Enumeration-anonymous)
 castxml_test_gccxml(Field)
 castxml_test_gccxml(Function)
 castxml_test_gccxml(Function-annotate)
+castxml_test_gccxml(Function-Argument-annotate)
 castxml_test_gccxml(Function-Argument-decay)
 castxml_test_gccxml(Function-Argument-default)
 castxml_test_gccxml(Function-rvalue-reference)
