Output: Add annotate() to more declaration attributes=""
Extend the change from commit e73fba54 (Output: Add annotate() to
function declaration attributes="", 2015-08-18) to support record, enum,
field, variable, and typedef since gccxml also supported attributes
in these.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -166,6 +166,7 @@ castxml_test_gccxml(ArrayType)
 castxml_test_gccxml(ArrayType-incomplete)
 castxml_test_gccxml(Class)
 castxml_test_gccxml(Class-abstract)
+castxml_test_gccxml(Class-annotate)
 castxml_test_gccxml(Class-base-typedef)
 castxml_test_gccxml(Class-bases)
 castxml_test_gccxml(Class-forward)
@@ -199,8 +200,10 @@ castxml_test_gccxml(CvQualifiedType)
 castxml_test_gccxml(Destructor)
 castxml_test_gccxml(Destructor-annotate)
 castxml_test_gccxml(Enumeration)
+castxml_test_gccxml(Enumeration-annotate)
 castxml_test_gccxml(Enumeration-anonymous)
 castxml_test_gccxml(Field)
+castxml_test_gccxml(Field-annotate)
 castxml_test_gccxml(Function)
 castxml_test_gccxml(Function-annotate)
 castxml_test_gccxml(Function-Argument-annotate)
@@ -242,6 +245,7 @@ castxml_test_gccxml(OperatorMethod-annotate)
 castxml_test_gccxml(PointerType)
 castxml_test_gccxml(ReferenceType)
 castxml_test_gccxml(RValueReferenceType)
+castxml_test_gccxml(Typedef-annotate)
 castxml_test_gccxml(Typedef-paren)
 castxml_test_gccxml(Typedef-to-Class-template)
 castxml_test_gccxml(Typedef-to-Enumeration)
@@ -249,6 +253,7 @@ castxml_test_gccxml(Typedef-to-Enumeration-anonymous)
 castxml_test_gccxml(Typedef-to-FundamentalType-mode)
 castxml_test_gccxml(Typedef-to-extern-C-FundamentalType-mode)
 castxml_test_gccxml(Variable)
+castxml_test_gccxml(Variable-annotate)
 castxml_test_gccxml(Variable-in-Class)
 castxml_test_gccxml(Variable-init)
 
