--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -219,6 +219,7 @@ castxml_test_gccxml(FundamentalType)
 castxml_test_gccxml(FundamentalTypes)
 castxml_test_gccxml(Method)
 castxml_test_gccxml(Method-annotate)
+castxml_test_gccxml(Method-overrides)
 castxml_test_gccxml(Method-rvalue-reference)
 castxml_test_gccxml(MethodType)
 castxml_test_gccxml(MethodType-cv)
