castxml: Support -std=c++14 with --castxml-gccxml
Drop the rejection of -std=c++14 and --castxml-gccxml together.  Extend
the test suite to run all gccxml output format tests in -std=c++14 mode
to verify the behavior of the mode is as close as possible to other
modes.  For the few tests that have c++11-specific expected output, use
it for c++14 expected output too.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -75,12 +75,20 @@ macro(castxml_test_gccxml_cxx11 test)
   castxml_test_gccxml_common(gccxml cxx c++11 ${test})
 endmacro()
 
+macro(castxml_test_gccxml_cxx14 test)
+  castxml_test_gccxml_common(gccxml cxx c++14 ${test})
+endmacro()
+
 macro(castxml_test_gccxml_broken_cxx98 test)
   castxml_test_gccxml_common(gccxml.broken cxx c++98 ${test})
 endmacro()
 
 macro(castxml_test_gccxml_broken_cxx11 test)
   castxml_test_gccxml_common(gccxml.broken cxx c++11 ${test})
+endmacro()
+
+macro(castxml_test_gccxml_broken_cxx14 test)
+  castxml_test_gccxml_common(gccxml.broken cxx c++14 ${test})
 endmacro()
 
 macro(castxml_test_gccxml_c test)
@@ -90,11 +98,13 @@ endmacro()
 macro(castxml_test_gccxml test)
   castxml_test_gccxml_cxx98(${test})
   castxml_test_gccxml_cxx11(${test})
+  castxml_test_gccxml_cxx14(${test})
 endmacro()
 
 macro(castxml_test_gccxml_broken test)
   castxml_test_gccxml_broken_cxx98(${test})
   castxml_test_gccxml_broken_cxx11(${test})
+  castxml_test_gccxml_broken_cxx14(${test})
 endmacro()
 
 set(input ${CMAKE_CURRENT_LIST_DIR}/input)
